Upgrading repo to the latest Spring